Adapt code for profiling experiments - code was unbound/infinite - code has been adapted to run for a finite number of iterations either via a CLI argument or in case an argument hasn't been provided, the loop defaults to 1000 iterations

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /CMakeFiles/
 /cmake-build-*/
 
+# CMake cache and install files
 /CMakeCache.txt
 cmake_install.cmake
 CTestTestfile.cmake
@@ -22,6 +23,13 @@ Makefile.in
 # === Test artifacts ===
 test_detail.xml
 *.log
+
+# === Coverage and profiling outputs ===
+coverage-report/
+coverage.info
+gmon.out
+gprof-report.txt
+valgrind-report.txt
 
 # === clang tools ===
 clang-tidy-result.yaml
